--- a/app/views/links/index.html.erb
+++ b/app/views/links/index.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 
 <div class="page-header">
-  <h1>Linkster <small>Post and share great links</small></h1>
+  <h1>Linkster <small>A portal for sharing liks</small></h1>
 </div>
 
 <div class="list-group">
